fix: prefixed all the internal variables with _ to prevent collisions with user defined variables (#27)